--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-  <a href="public/get-gooned.html">
+<a href="/project-goon/get-gooned.html">
     <img src="./assets/images/animated-click-here-sign-and-button-image-0009.gif" alt="Click here" />
   </a>
 </body>
