Fix broken link to get-gooned.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-<a href="/portfolio-project/get-gooned.html">
+<a href="get-gooned.html">
     <img src="./assets/images/animated-click-here-sign-and-button-image-0009.gif" alt="Click here" />
   </a>
 </body>
